Fix for FPS counter rendering incorrectly on mobile.

--- a/modules/website/src/main/webapp/resources/content/game/css/ui/fps.css
+++ b/modules/website/src/main/webapp/resources/content/game/css/ui/fps.css
@@ -10,10 +10,14 @@
     left: 0;
     width: 100%;
     text-align: center;
-    font-size: 2em;
     text-shadow: 0em 0em 0.2em #333;
 }
 
+#projectsandbox #ps-ui #ps-fps
+{
+    font-size: 2em;
+}
 #projectsandbox #ps-ui #ps-fps #ps-fps-value
 {
+    font-size: 1em;
 }
